[package]
name = "mdbook-luacats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = "4.5.7"
env_logger = "0.11.3"
handlebars = { version = "5.1.2", features = ["dir_source", "heck", "rust-embed"] }
indextree = "4.6.1"
itertools = "0.13.0"
log = "0.4.21"
mdbook = "0.4.40"
pulldown-cmark = "0.11.0"
pulldown-cmark-to-cmark = "15.0.1"
rust-embed = { version = "8.4.0", features = ["include-exclude"] }
semver = "1.0.23"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tempdir = "0.3.7"
thiserror = "1.0.61"
toml = "0.5.11" # pin this to the version used by mdbook
url = "2.5.2"
